--- a/iletisim.html
+++ b/iletisim.html
@@ -56,13 +56,14 @@
           </div>
         </div>
         <div class="iletisim-wrapper">
-          <div class="ofis-iletisim iletisim-content">
+          <div class="laboratuvar-iletisim iletisim-content">
             <span class="ofis-subtitle">Laboratuvar</span>
-            <span class="adress iletisim-text">Adress: Aziziye Mahallesi Kuloğlu Sokak Funda Apt. No:31 Daire:2 Çankaya/ANKARA</span>
+            <span class="adress iletisim-text">Adress: İVEDİKOSB Mah. 1408 Cd. No: 6 / YENİMAHALLE / ANKARA</span>
             <span class="e-mail iletisim-text">E-mail: formjeoteknik@gmail.com</span>
-            <span class="tel-no iletisim-text">Telefon: +90 312 4400083</span>
-            <span class="fax-no iletisim-text">Faks: +90 312 4400198</span>
+            <span class="tel-no iletisim-text">Telefon: +90 312 395 13 35 </span>
+            <span class="fax-no iletisim-text">Faks: +90 312 395 13 35</span>
             <div class="google-map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.941722064579!2d32.74603401538296!3d39.98740767941725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3498ecc5e18bd%3A0x58dc123447c2e90!2sForm%20Jeoteknik%20M%C3%BCh.%20Lab.%20Ltd.%20%C5%9Eti!5e0!3m2!1sen!2str!4v1633900564029!5m2!1sen!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
           </div>
         </div>
