--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -26,7 +26,6 @@
             <ul id="menu">
               <li class="menu-item"><a href="index.html">Anasayfa</a></li>
               <li class="menu-item"><a href="hakkimizda.html">Hakkımızda</a></li>
-              <li class="menu-item"><a href="faaliyetlerimiz.html">Faaliyetlerimiz</a></li>
               <li class="menu-item"><a href="akreditasyon.html">Akreditasyon</a></li>
               <li class="menu-item"><a href="iletisim.html">İletişim</a></li>
             </ul>
@@ -35,7 +34,6 @@
         <div class="menu-list">
           <li class="menu-item"><a href="index.html">Anasayfa</a></li>
           <li class="menu-item"><a href="hakkimizda.html">Hakkımızda</a></li>
-          <li class="menu-item"><a href="faaliyetlerimiz.html">Faaliyetlerimiz</a></li>
           <li class="menu-item"><a href="akreditasyon.html">Akreditasyon</a></li>
           <li class="menu-item"><a href="iletisim.html">İletişim</a></li>
         </div>
@@ -44,7 +42,7 @@
         <div class="section header-wrapper about-us-header">
           <div class="au-header-wrapper">
             <span class="au-header-heading">Bizi Tanıyın</span>
-            <span class="au-header-text">Müvekkillerimize çözüm odaklı ve yaratıcı hizmet sunuyoruz.</span>  
+            <span class="au-header-text">Müsterilerimize çözüm odaklı ve yaratıcı hizmet sunuyoruz.</span>  
           </div>
         </div>
         <div class="au-values-wrapper">
