--- a/iletisim.html
+++ b/iletisim.html
@@ -26,7 +26,6 @@
             <ul id="menu">
               <li class="menu-item"><a href="index.html">Anasayfa</a></li>
               <li class="menu-item"><a href="hakkimizda.html">Hakkımızda</a></li>
-              <li class="menu-item"><a href="faaliyetlerimiz.html">Faaliyetlerimiz</a></li>
               <li class="menu-item"><a href="akreditasyon.html">Akreditasyon</a></li>
               <li class="menu-item"><a href="iletisim.html">İletişim</a></li>
             </ul>
@@ -35,7 +34,6 @@
         <div class="menu-list">
           <li class="menu-item"><a href="index.html">Anasayfa</a></li>
           <li class="menu-item"><a href="hakkimizda.html">Hakkımızda</a></li>
-          <li class="menu-item"><a href="faaliyetlerimiz.html">Faaliyetlerimiz</a></li>
           <li class="menu-item"><a href="akreditasyon.html">Akreditasyon</a></li>
           <li class="menu-item"><a href="iletisim.html">İletişim</a></li>
         </div>
@@ -57,7 +55,7 @@
         </div>
         <div class="iletisim-wrapper">
           <div class="laboratuvar-iletisim iletisim-content">
-            <span class="ofis-subtitle">Laboratuvar</span>
+            <span class="ofis-subtitle">Zemin ve Kaya Mekaniği Laboratuvarı</span>
             <span class="adress iletisim-text">Adress: İVEDİKOSB Mah. 1408 Cd. No: 6 / YENİMAHALLE / ANKARA</span>
             <span class="e-mail iletisim-text">E-mail: formjeoteknik@gmail.com</span>
             <span class="tel-no iletisim-text">Telefon: +90 312 395 13 35 </span>
